2005-01-06  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-01-01  Michael Koch  <konqueror@gmx.de>

	* javax/swing/DefaultBoundedRangeModel.java
	(fireValueChanged): Fixed off-by-one error
	
2005-01-06  Dalibor Topic  <robilad@kaffe.org>

	* libraries/clib/native/Thread.c (java_lang_VMThread_sleep): 
	Removed. Replaced by java version in VMThread.

2005-01-06  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-01-02  Archie Cobbs  <archie@dellroad.org>

	* vm/reference/java/lang/VMThread.java (sleep()): revert behavior
	of sleep(0,0) to previous, where we check for InterruptedException.

	2004-12-31  Archie Cobbs  <archie@dellroad.org>

	* java/lang/Thread.java (sleep(long,int)): Only do argument
	checking and push implementation to VMThread.sleep().
	* vm/reference/java/lang/VMThread.java (join): Prevent ms overflow.
	(sleep): Provide default implementation using Object.wait() and
	Thread.yield().
	
2005-01-06  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2004-12-31  Michael Koch  <konqueror@gmx.de>

	* javax/swing/JComponent.java
	(getToolTipText): New method.
	(getTitledBorderText): Likewise.
	(getAccessibleKeyBinding): Likewise.
	(getVerifyInputWhenFocusTarget): Likewise.
	(setVerifyInputWhenFocusTarget): Likewise.
	(verifyInputWhenFocusTarget): New instance field.
	
2005-01-06  Dalibor Topic  <topic@mpiat2305>

	* test/internal/Makefile.am (jitBasic_LDADD): Added LTLIBINTL
	to fix build breakage on freebsd tinderbox.

	* tests/internal/Makefile.in: Regenerated.

2005-01-06  Guilhem Lavaux  <guilhem@kaffe.org>

	* tests/internal/Makefile.am: Link jitBasic with libreplace.la

	* tests/internal/Makefile.in: Regenerated.

	Reported by Michael Franz <mvfranz@gmail.com>

2005-01-06  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2004-12-31  Michael Koch  <konqueror@gmx.de>

	* javax/swing/DefaultBoundedRangeModel.java:
	Fixed javadocs all over.