@@ -1,3 +1,10 @@
+2005-01-06  Dalibor Topic  <topic@mpiat2305>
+
+	* test/jni/Makefile.am (jniBase_LDADD): Link jitBasic with 
+	libreplace.la and LTLIBINTL.
+
+	* tests/internal/Makefile.in: Regenerated.
+
 2005-01-06  Dalibor Topic  <robilad@kaffe.org>
 
 	Resynced with GNU Classpath.
